fix dms for get unverified request
